--- a/o_nas.html
+++ b/o_nas.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>O nas</title>
+    <title>o nas</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
@@ -48,91 +48,91 @@
   <body>
     <div id="base" class="">
 
+      <!-- Unnamed (Rectangle) -->
+      <div id="u284" class="ax_default box_1">
+        <div id="u284_div" class=""></div>
+        <div id="u284_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u285" class="ax_default heading_1">
+        <div id="u285_div" class=""></div>
+        <div id="u285_text" class="text ">
+          <p><span>Kim jesteśmy?</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u286" class="ax_default box_1">
+        <div id="u286_div" class=""></div>
+        <div id="u286_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u287" class="ax_default paragraph">
+        <div id="u287_div" class=""></div>
+        <div id="u287_text" class="text ">
+          <p><span>Zapraszamy na Polberfest - polską wersję kultowego Oktoberfestu, która składa hołd jednemu z najstarszych i najbardziej uwielbianych trunków na świecie - piwu! To wyjątkowe wydarzenie gromadzi miłośników piwa z całego kraju, pragnących doświadczyć niezapomnianej atmosfery i delektować się doskonałymi smakami piwnymi.</span></p><p><span>Podczas Polberfestu możesz cieszyć się szerokim wyborem różnorodnych piw, począwszy od tradycyjnych polskich stylów aż po innowacyjne i eksperymentalne piwa rzemieślnicze. Browary z całej Polski prezentują swoje wyroby, umożliwiając degustację i poznawanie różnorodności piwnych kultur.</span></p><p><span>To nie tylko okazja do odkrywania smakowych perełek, ale także do wspaniałej zabawy. Na Polberfest nie brakuje tradycyjnej polskiej muzyki, tańców i konkursów, które wprawiają uczestników w radosny nastrój. Możesz tańczyć w rytmach polskiego folku, bawić się w tłumie przyjaciół i obcować z piwną społecznością, która łączy pasję do piwa.</span></p><p><span>Nie zapominamy także o tradycyjnej polskiej kuchni, która towarzyszy temu wyjątkowemu wydarzeniu. Smaczne przekąski, takie jak kiełbaski, oscypki czy pierogi, idealnie komponują się z różnorodnością piwnych smaków.</span></p><p><span>Polberfest to nie tylko spotkanie piwne, ale również okazja do integracji społeczności, wymiany doświadczeń i czerpania radości z życia. Dołącz do nas na tej niezapomnianej podróży po polskim piwie i poczuj magię Polberfestu - wydarzenia, które łączy tradycję, kulturę piwa i radosną atmosferę polskiej wspólnoty.</span></p>
+        </div>
+      </div>
+
       <!-- Unnamed (Image) -->
-      <div id="u26" class="ax_default image">
-        <img id="u26_img" class="img " src="images/strona_g__wna/u0.png"/>
-        <div id="u26_text" class="text " style="display:none; visibility: hidden">
+      <div id="u288" class="ax_default image">
+        <img id="u288_img" class="img " src="images/o_nas/u288.jpg"/>
+        <div id="u288_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Image) -->
+      <div id="u289" class="ax_default image">
+        <img id="u289_img" class="img " src="images/o_nas/u289.jpg"/>
+        <div id="u289_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Image) -->
+      <div id="u290" class="ax_default image">
+        <img id="u290_img" class="img " src="images/o_nas/u290.jpg"/>
+        <div id="u290_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u27" class="ax_default box_1">
-        <div id="u27_div" class=""></div>
-        <div id="u27_text" class="text " style="display:none; visibility: hidden">
+      <div id="u291" class="ax_default box_1">
+        <div id="u291_div" class=""></div>
+        <div id="u291_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Image) -->
+      <div id="u292" class="ax_default image">
+        <img id="u292_img" class="img " src="images/o_nas/u292.png"/>
+        <div id="u292_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u28" class="ax_default box_1">
-        <div id="u28_div" class=""></div>
-        <div id="u28_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
+      <div id="u293" class="ax_default heading_3">
+        <div id="u293_div" class=""></div>
+        <div id="u293_text" class="text ">
+          <p><span style="font-family:&quot;Arial Pogrubiony&quot;, &quot;Arial Normalny&quot;, &quot;Arial&quot;, sans-serif;font-weight:700;">Heading 3</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u29" class="ax_default heading_1">
-        <div id="u29_div" class=""></div>
-        <div id="u29_text" class="text ">
-          <p><span>O nas</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u30" class="ax_default paragraph">
-        <div id="u30_div" class=""></div>
-        <div id="u30_text" class="text ">
-          <p><span>Naszym celem jest stworzenie wyjątkowej platformy, która umożliwia studentom spotkanie się, wymianę doświadczeń i rozwijanie umiejętności szachowych. Niezależnie od tego, czy jesteś doświadczonym graczem, czy dopiero zaczynasz swoją przygodę ze szachami, nasze zawody są otwarte dla Ciebie.</span></p><p><span><br>Nauczyciele i instruktorzy szachowi będą obecni, aby służyć swoją wiedzą i doświadczeniem, oferując lekcje, analizę partii i cenne wskazówki. Chcemy, aby każdy uczestnik miał możliwość rozwoju swoich umiejętności i podzielenia się pasją do szachów z innymi.</span></p><p><span><br></span></p><p><span>Dziękujemy naszym sponsorom i partnerom za wsparcie, które umożliwiło nam zorganizowanie tych wyjątkowych zawodów. Wasza hojność i zaangażowanie są niezastąpione.</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u31" class="ax_default link_button">
-        <div id="u31_div" class=""></div>
-        <div id="u31_text" class="text ">
-          <p><span>Strona Główna</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u32" class="ax_default link_button">
-        <div id="u32_div" class=""></div>
-        <div id="u32_text" class="text ">
-          <p><span>O nas</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u33" class="ax_default link_button">
-        <div id="u33_div" class=""></div>
-        <div id="u33_text" class="text ">
-          <p><span>Kontakt</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u34" class="ax_default link_button">
-        <div id="u34_div" class=""></div>
-        <div id="u34_text" class="text ">
-          <p><span>Sponsorzy</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u35" class="ax_default link_button">
-        <div id="u35_div" class=""></div>
-        <div id="u35_text" class="text ">
-          <p><span>Zapisz Się</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u36" class="ax_default link_button">
-        <div id="u36_div" class=""></div>
-        <div id="u36_text" class="text ">
-          <p><span>Terminarz</span></p>
+      <div id="u294" class="ax_default paragraph">
+        <div id="u294_div" class=""></div>
+        <div id="u294_text" class="text ">
+          <p><span>W ramach naszej witryny stosujemy pliki cookies w celu świadczenia Państwu usług na najwyższym poziomie, w tym w sposób dostosowany do indywidualnych potrzeb. Korzystanie z witryny bez zmiany ustawień dotyczących cookies oznacza, że będą one zamieszczane w Państwa urządzeniu końcowym. Mogą Państwo dokonać w każdym czasie zmiany ustawień dotyczących cookies.</span></p>
         </div>
       </div>
     </div>
